14-kubernetes-net-security-05-security-context-network-policies/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: first-service
  namespace: app-namespace
spec:
  type: ClusterIP
  selector:
    app: first-hello-world
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: second-service
  namespace: app-namespace
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: second-hello-world
  type: ClusterIP
