14-kubernetes-net-security-05-security-context-network-policies/first-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: first-hello-world-policy
  namespace: app-namespace
spec:
  podSelector:
    matchLabels:
      app: first-hello-world
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: second-hello-world
  egress:
  - {}
  policyTypes:
  - Ingress
  - Egress
