14-kubernetes-net-security-05-security-context-network-policies/second-networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: second-hello-world-policy
  namespace: app-namespace
spec:
  podSelector:
    matchLabels:
      app: second-hello-world
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: first-hello-world
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: first-hello-world
  policyTypes:
  - Ingress
  - Egress
